--- a/public/components/css/style.css
+++ b/public/components/css/style.css
@@ -1,390 +1,402 @@
 body[themebg-pattern=theme1]
-        {
-            background: none !important;
-        }
+{
+    background: none !important;
+}
 
-        body{
-            font-family: 'AdorshoLipi', sans-serif;
-        }
-        .logo img {
-            max-width: 263px;
-            height: 77px;
-            width: 100%;
-        }
+body{
+    font-family: 'AdorshoLipi', sans-serif;
+}
+.logo img {
+    max-width: 263px;
+    height: 77px;
+    width: 100%;
+}
 
-        .news_title.third b {
-            font-size: 15px;
-        }
+.news_title.third b {
+    font-size: 15px;
+}
 
-        .logo {
-            text-align: center;
-        }
-        button.uk-button.uk-button-default.uk-margin-small-right {
-    border: none;
-    font-size: 26px;
-    text-align: left;
-    padding: 0;
+.logo {
+    text-align: center;
+}
+button.uk-button.uk-button-default.uk-margin-small-right {
+border: none;
+font-size: 26px;
+text-align: left;
+padding: 0;
 }
 .date {
-    FONT-SIZE: 13px;
-    font-weight: bold;
-    margin-top: 10px;
+FONT-SIZE: 13px;
+font-weight: bold;
+margin-top: 10px;
 }
 
 .bread_cumb ul {
-    padding: 0px;
-    margin: 0;
-    margin-top: 20px;
+padding: 0px;
+margin: 0;
+margin-top: 20px;
 }
 
 .bread_cumb ul li {
-    list-style: circle;
-    display: inline-block;
-    padding-right: 8px;
+list-style: circle;
+display: inline-block;
+padding-right: 8px;
 }
-
+.print-story-first-part.blank-m__story-first-part__1nwWG {
+display: flex !important;
+}
 .bread_cumb ul li a {
-    text-decoration: none;
-    color: black;
-    font-size: 15px;
+text-decoration: none;
+color: black;
+font-size: 15px;
 }
 
 .news_active
 {
-    color: red !important;
+color: red !important;
 }
 
 .links i {
-    font-size: 20px;
-    padding: 5px 5px;
+font-size: 20px;
+padding: 5px 5px;
 }
 .links a:nth-child(1)
 {
-    color: blue;
+color: blue;
 }
 .links a:nth-child(2)
 {
-    color: lightblue;
+color: lightblue;
 }
 .links a:nth-child(3)
 {
-    color: purple;
+color: purple;
 }
 .links a:nth-child(4)
 {
-    color: red;
+color: red;
 }
 .links a{
-    text-decoration: none;
+text-decoration: none;
 }
 .nav-menu ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 2px 7px;
+list-style: none;
+display: inline-block;
+padding: 2px 7px;
 }
 
 .nav-menu ul li a {
-    text-decoration: none;
-    color: black;
-    font-size: 15px;
-    font-weight: bold;
+text-decoration: none;
+color: black;
+font-size: 15px;
+font-weight: bold;
 }
 
 .nav-menu ul li a:hover
 {
-    color: red;
+color: red;
 }
 
 
 
 .nav-menu {
-    text-align: center !important;
+text-align: center !important;
 }
 
 .menu-area {
-    text-align: center !important;
+text-align: center !important;
 }
 .menu-bar {
-    background: #f5f3f3;
-    /* padding-top: 5px; */
-    /* padding-bottom: 0px; */
-    margin-top: 10px;
+background: #f5f3f3;
+/* padding-top: 5px; */
+/* padding-bottom: 0px; */
+margin-top: 10px;
 }
 
 .nav-menu {
-    padding: 0px 0px;
+padding: 0px 0px;
 }
 
 .nav-menu ul {
-    margin: 0;
+margin: 0;
 }
 
 .menu-bar {
-    padding: 8px 0px;
+padding: 8px 0px;
 }
 .uk-offcanvas-bar.uk-offcanvas-bar-animation.uk-offcanvas-slide {
-    padding: 0px;
+padding: 0px;
 }
 .side-menu {
-    margin-top: 45px;
-    padding-top: 55px;
+margin-top: 45px;
+padding-top: 55px;
 }
 
 .side-menu ul li {
-    list-style: none;
-    display: block;
-    padding: 12px 3px;
-    border-bottom: 1px solid white;
+list-style: none;
+display: block;
+padding: 12px 3px;
+border-bottom: 1px solid white;
 }
 
 .side-menu ul li a {
-    text-decoration: none;
-    font-size: 14px;
+text-decoration: none;
+font-size: 14px;
 }
 .side-menu ul li a:hover {
-    color: red;
+color: red;
 }
 
 .news_title b {
-    font-size: 25px;
+font-size: 25px;
 }
 
 .news_title span {
-    font-size: 14px;
+font-size: 14px;
 }
 .pub-date span {
-    font-size: 11px;
+font-size: 11px;
 }
 
 .pub-date {
-    margin-top: 9px;
+margin-top: 9px;
 }
 .news_box {
-    border-right: 1px solid lightgray;
-    padding: 10px 18px;
-    margin-top: 20px;
-    border-bottom: 1px solid lightgray;
+border-right: 1px solid lightgray;
+padding: 10px 18px;
+margin-top: 20px;
+border-bottom: 1px solid lightgray;
 }
 .news_box a {
-    text-decoration: none !important;
-    color: black !important;
+text-decoration: none !important;
+color: black !important;
 }
 .news_cat_box a {
-    text-decoration: none !important;
-    color: black !important;
+text-decoration: none !important;
+color: black !important;
 }
 .news_image{
-    width: 100%;
-    height: 180px;
-    transition: .3s;
-    overflow: hidden;
+width: 100%;
+height: 180px;
+transition: .3s;
+overflow: hidden;
 }
 .news_image img{
-    transition: .3s;
+transition: .3s;
 }
 
 .news_image img:hover
 {
-    transform: scale(1.1) !important;
+transform: scale(1.1) !important;
 }
 
 .news_title b{
-    color: red !important;
+color: red !important;
 }
 div#other_news .news_title b {
-    font-size: 17px;
+font-size: 17px;
 }
 
 div#other_news .news_title span {
-    font-size: 11px;
+font-size: 11px;
 }
 
 .section-cat {
-    margin-top: 22px;
-    border-top: 1px dashed lightgray;
-    padding-top: 15px;
+margin-top: 22px;
+border-top: 1px dashed lightgray;
+padding-top: 15px;
 }
 
 .cat-heading {
-    border-left: 4px solid #d31616;
-    padding-left: 20px;
+border-left: 4px solid #d31616;
+padding-left: 20px;
 }
 
 .cat_name b {
-    font-size: 22px;
+font-size: 22px;
 }
 
 .news_cat_box .news_title b {
-    font-size: 18px;
+font-size: 18px;
 }
 
 
 
 .news_cat_box .news_title span {
-    font-size: 13px;
+font-size: 13px;
 }
 
 .news_cat_box {
-    height: 345px;
-    padding: 11px;
-    border-right: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
-    margin-top: 20px;
+height: 345px;
+padding: 11px;
+border-right: 1px solid lightgray;
+border-bottom: 1px solid lightgray;
+margin-top: 20px;
 }
 .news_box {
-    height: 194px;
+height: 194px;
 }
 
 .photo_big {
-    position: relative;
-    margin-top: 20px;
-    overflow: hidden;
+position: relative;
+margin-top: 20px;
+overflow: hidden;
 }
 
 .photo_big img {
-    /*max-width: 80%;*/
-    transition: .3s;
+/*max-width: 80%;*/
+transition: .3s;
 }
 .photo_big img:hover {
-    /*max-width: 80%;*/
-    transform: scale(1.1);
+/*max-width: 80%;*/
+transform: scale(1.1);
 }
 
 
 
 .photo_big b {
-    position: absolute;
-    left: 0px;
-    bottom: 0;
-    width: 100%;
-    background: #00000063;
-    padding: 21px 18px;
-    font-size: 21px;
-    overflow: hidden;
+position: absolute;
+left: 0px;
+bottom: 0;
+width: 100%;
+background: #00000063;
+padding: 21px 18px;
+font-size: 21px;
+overflow: hidden;
 }
 
 .photo_big b:hover{
-    color: yellow !important;
+color: yellow !important;
 }
 
 .photo_big b{
-    color: white !important;
+color: white !important;
 }
 
 .photo_big {
-    overflow: hidden;
-    /* width: 519px; */
+overflow: hidden;
+/* width: 519px; */
 }
 .cat-body {
-    background: black;
-    margin-top: 7px;
-    padding: 20px;
+background: black;
+margin-top: 7px;
+padding: 20px;
 }
 .cat-body-third
 {
-    border-right: 1px solid lightgray;
-    border-left: 1px solid lightgray;
+border-right: 1px solid lightgray;
+border-left: 1px solid lightgray;
 }
 .news_title.third{
-    padding: 10px;
+padding: 10px;
 }
 .news_cat_box.third {padding: 0px;height: auto;border-bottom: 1px solid lightgray;padding-bottom: 10px;border-right: none;}
 .news_image.fourth {
-    height: auto;
+height: auto;
 }
 
 .uk-card.uk-card-default.uk-card-body.uk-text-center.uk-position-z-index.uk-sticky {
-    padding: 0px !important;
+padding: 0px !important;
 }
 
 .menu-bar {
-    margin-top: 0px;
+margin-top: 0px;
 }
 
 .uk-background-muted.uk-height-large {
-    height: auto;
+height: auto;
 }
 .logo_footer img {
-    height: 51px;
+height: 51px;
 }
 .other_cat_link a {
-    text-decoration: none;
-    color: black;
-    font-size: 15px;
-    font-weight: bold;
+text-decoration: none;
+color: black;
+font-size: 15px;
+font-weight: bold;
 }
 
 .other_cat_link {
-    margin-top: 20px;
+margin-top: 20px;
 }
 
 .logo_footer {
-    margin-top: 26px;
+margin-top: 26px;
 }
 
 .footer-wrapper {
-    border-top: 1px solid lightgray;
-    margin-top: 34px;
+border-top: 1px solid lightgray;
+margin-top: 34px;
 }
 .follow_links {
-    text-align: center;
-    margin-top: 20px;
-    border-top: 1px dashed lightgray;
-    padding-top: 8px;
+text-align: center;
+margin-top: 20px;
+border-top: 1px dashed lightgray;
+padding-top: 8px;
 }
 .links-page ul li {
-    display: inline-block;
-    /* list-style: none; */
-    padding: 11px;
+display: inline-block;
+/* list-style: none; */
+padding: 11px;
+}
+
+.news_box{
+overflow: hidden;
+}
+
+.news_image img {
+/* max-width: 67%; */
+height: 144px;
+width: 215px;
 }
 
 .page_links {
-    border-top: 1px dashed lightgray;
-    margin-top: 13px;
-    text-align: center;
-    /*border-bottom: 1px dashed lightgray;*/
-    padding-top: 20px;
+border-top: 1px dashed lightgray;
+margin-top: 13px;
+text-align: center;
+/*border-bottom: 1px dashed lightgray;*/
+padding-top: 20px;
 }
 .copyright {
-    padding: 22px 0px;
-    background: #161414;
-    text-align: center;
-    color: white;
-    margin-top: 10px;
+padding: 22px 0px;
+background: #161414;
+text-align: center;
+color: white;
+margin-top: 10px;
 }
 .links-page ul li a {
-    text-decoration: none;
-    color: black;
-    border: 1px solid lightgray;
-    padding: 10px;
+text-decoration: none;
+color: black;
+border: 1px solid lightgray;
+padding: 10px;
 }
 .links-page ul li a:hover {
-    background: black;
-    color: white;
-    border: 1px solid white;
+background: black;
+color: white;
+border: 1px solid white;
 }
 .menu_title b {
-    font-size: 27px;
-    color: red;
+font-size: 27px;
+color: red;
 }
 
 .menu_title {
-    margin-top: 20px;
-    border-bottom: 1px solid lightgray;
+margin-top: 20px;
+border-bottom: 1px solid lightgray;
 }
 
 a{
-    text-decoration: none !important;
+text-decoration: none !important;
 }
 .news_box.menu {
-    border: none;
-    border-bottom: 1px solid lightgray;
-    padding: 0px;
+border: none;
+border-bottom: 1px solid lightgray;
+padding: 0px;
 }
 
 .menu_news {
-    max-width: 825px;
-    margin: auto;
+max-width: 825px;
+margin: auto;
 }
 
 /*responsive css*/
@@ -393,15 +405,15 @@ a{
 {
 
 
-    #login-icon{
-        display: none;
-    }
-    .date{
-        text-align: center;
-    }
-    .menu-bar{
-        display: none;
-    }
+#login-icon{
+display: none;
+}
+.date{
+text-align: center;
+}
+.menu-bar{
+display: none;
+}
 
 
 }
